# lumibot

./: .gitattributes  .gitignore  .mailmap  AGENTS.md  BACKTESTING_ARCHITECTURE.md  BROKER_OPTIMIZATION_IMPLEMENTATION.md  BlueprintBot.py  BuyAndHoldQuietLogsTest_indicators.csv  BuyAndHoldQuietLogsTest_indicators.html  BuyAndHoldQuietLogsTest_settings.json  BuyAndHoldQuietLogsTest_trades.csv  CHANGELOG.md  CLAUDE.md  CME_SCRAPING_SUMMARY.md  CRITICAL_BACKWARDS_COMPAT_FIX.md  CRITICAL_FIX_GAME_PLAN.md  EARLY_EXIT_PROFILING.md  FUTURES_ENHANCEMENT_SUMMARY.md  FUTURES_SHORT_SELLING_AUDIT.md  FUTURES_TESTING_SUMMARY.md  FUTURES_VALIDATION_MATRIX.md  GC_DATA_QUALITY_ROOT_CAUSE_REPORT.md  GITBUTLER_WORKFLOW.md  INDEX_TESTING_STATUS.md  LICENSE  MANIFEST.in  MANUAL_4_TEST_COMMANDS.md  MomentumBot.py  PHASE_3_FINDINGS.md  PHASE_4A_CHECKLIST.md  PHASE_4A_CODE_CHANGES.md  PHASE_4A_DATAFLOW.md  PHASE_4A_DETAILED_PLAN.md  PHASE_4A_QUICK_REFERENCE.md  PHASE_4B_FINDINGS.md  PHASE_4C_FINDINGS.md  PHASE_4_SUCCESS.md  PHASE_4_SUMMARY.md  PLAN1.md  POLARS_FUTURES_FIX_GAMEPLAN.md  (+140 more)
.githooks/: pre-push
.github/: CODEOWNERS  copilot-instructions.md
.secrets/: lumi_secrets.env.example
aws/: backtest_data_lambda.py
backtesting/: __init__.py  backtesting_broker.py  yahoo_backtesting.py
botspot_api_class/: README.md  __init__.py  auth.py  base.py  client.py  exceptions.py
botspot_api_discovery/: MASTER_TODO.md  README.md  TC001_AUTHENTICATION_SUMMARY.md  automated_login_test.py  botspot_api_endpoints.json  botspot_test_plan.json  requirements.txt  run_tests.sh  session_notes.md  test_api_client.py  test_api_replication.py
brokers/: __init__.py  alpaca.py  broker.py
crypto_strategies/: diversified_leverage_bt.py  golden_death_cross_live.py  momentum.py  reversion.py
data/: AMZN_1D.CSV  AMZN_1M.CSV  AMZN_DAY.csv  AMZN_HOUR.csv  AMZN_minute.csv  BTC-USD_DAY.csv  BTC-USD_HOUR.CSV  BTC-USD_HOUR.csv  BTC-USD_MINUTE.csv  GLD.csv  SPY.csv  SRNE_Minute.csv  UPRO_Minute.csv  XYZ_1D.csv  XYZ_1Min.csv  minute_data.csv
data_sources/: __init__.py  alpaca.py  alpaca_data.py  data_source.py  yahoo.py
docs/: .buildinfo  BACKTESTING_ARCHITECTURE.md  BACKTESTING_TESTS.md  CNAME  DATABENTO.md  ProjectX_Integration_Guide.md  README.md  THETADATA_CACHE_VALIDATION.md  THETA_POLARS_PROGRESS.md  alpaca.html  autosummary_template.html  backtesting.all.html  backtesting.backtesting_function.html  backtesting.how_to_backtest.html  backtesting.html  backtesting.indicators_files.html  backtesting.logs_csv.html  backtesting.pandas.html  backtesting.polygon.html  backtesting.tearsheet_html.html  backtesting.thetadata.html  backtesting.trades_files.html  backtesting.yahoo.html  brokers.alpaca.html  brokers.bitunix.html  brokers.ccxt.html  brokers.html  brokers.interactive_brokers.html  brokers.interactive_brokers_legacy.html  brokers.projectx.html  brokers.schwab.html  brokers.tradier.html  brokers.tradovate.html  databento_polars_overview.md  deployment.html  download_price_data_alpaca.html  entities.asset.html  entities.bar.html  entities.bars.html  entities.chains.html  (+74 more)
docsrc/: Makefile  README.md  backtesting.all.rst  backtesting.backtesting_function.rst  backtesting.databento.rst  backtesting.how_to_backtest.rst  backtesting.pandas.rst  backtesting.polygon.rst  backtesting.rst  backtesting.tearsheet_html.rst  backtesting.thetadata.rst  backtesting.trades_files.rst  backtesting.yahoo.rst  brokers.alpaca.rst  brokers.bitunix.rst  brokers.ccxt.rst  brokers.interactive_brokers.rst  brokers.interactive_brokers_legacy.rst  brokers.projectx.rst  brokers.rst  brokers.schwab.rst  brokers.tradovate.rst  conf.py  deployment.rst  entities.asset.rst  entities.bar.rst  entities.bars.rst  entities.data.rst  entities.order.rst  entities.position.rst  entities.rst  entities.trading_fee.rst  futures.rst  getting_started.rst  index.rst  lifecycle_methods.after_market_closes.rst  lifecycle_methods.initialize.rst  lifecycle_methods.on_abrupt_closing.rst  lifecycle_methods.on_new_order.rst  lifecycle_methods.rst  (+16 more)
entities/: __init__.py  bars.py  order.py  position.py
example_strategies/: __init__.py  crypto_importamt_functions.py  day10.py  forex_important_functions.py  main.py  main_ib.py  main_pandas_daily.py  momentum.py  options.py  screener.py  simple_start_alpaca.py  strangle.py  strategy.py
examples/: botspot_error_reporting_example.py  databento_futures_example.py  databento_optimized_example.py  gc_futures_el_optimized.py  gc_futures_mt4_replica.py  gc_futures_optimized copy.py  gc_futures_optimized.py  projectx_config_template.env  projectx_example.py  run_fundamental_value.py
getting_started/: credentials.example.py  futures.py  main.py  main_ib.py  main_pandas.py  main_pandas_daily.py  options.py  options_greeks_backtesting.py  real_time_bars.py  simple_start_alpaca.py  simple_start_ib.py  simple_start_single_file.py  strangle.py
lumibot/: __init__.py  config.py  constants.py  credentials.py
scripts/: check_eod_chunking.py  compare_backtest_outputs.py  compare_option_data_coverage.py  fetch_upstream.sh  interactive_merge.sh  merge_gitbutler_branch.sh  restore_and_wire_https.sh  status_check.sh
services/: __init__.py  alpaca_service.py  twitter.py
sources/: yahoo.py
strategies/: TEST_EXPORT.py  __init__.py  day10_strategy.py  demo.py  diversication.py  diversification.py  intraday_momentum.py  momentum.py  quick_momentum.py  screener.py  strategy.py
tests/: THETADATA_PARITY_RESULTS.md  __init__.py  compare_pandas_polars_fix.py  conftest.py  debug_fill_divergence.py  debug_parity_fills.py  debug_parity_portfolio.py  debug_timeshift_diagnostic.py  fixtures.py  quick_hims_test.py  test_ai_agents.py  test_alpaca.py  test_alpaca_auth_fix.py  test_alpaca_backtesting.py  test_alpaca_backtesting_new.py  test_alpaca_data.py  test_alpaca_helpers.py  test_alpaca_multileg_fix.py  test_alpaca_oauth.py  test_apscheduler_warnings.py  test_asset.py  test_asset_auto_expiry.py  test_auto_market_inference.py  test_backtest_cache_manager.py  test_backtest_polygon.py  test_backtesting_broker.py  test_bars.py  (+141 more)
(+2093 files in other folders)
