# pyproject.toml seems to be more popular than setup.cfg these days.  Adding
# configs for tools that use it and will port as much here as possible.

# Ruff is a tool that combines several linters into one including Flake8 and isort.
# Runs much faster than running them individually.
[tool.ruff]
line-length = 120

# Assume Python 3.8+ for type annotations
target-version = "py38"

select = [
  "A",  # prevent using keywords that clobber python builtins
  "B",  # bugbear: security warnings
  "E",   # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle
  "UP", # pyupgrade
  "I",  # isort
  #  "D",   # pydocstyle
]

[tool.poetry]
name = "lumibot"
version = "3.8.16"
description = "Backtesting and Trading Library, Made by Lumiwealth"
authors = ["Robert Grzesik <rob@lumiwealth.com>"]
readme = "README.md"
repository = "https://github.com/Lumiwealth/lumibot"
packages = [{include = "lumibot"}]
python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9"
polygon-api-client = ">=1.14.0"
alpaca-py = ">=0.28.1"
alpha-vantage = "*"
ibapi = "9.81.1.post1"
yfinance = ">=0.2.46"
matplotlib = ">=3.3.3"
quandl = "*"
numpy = ">=1.20.0"
pandas = ">=2.2.0"
pandas-datareader = "*"
pandas-market-calendars = ">=4.3.1"
plotly = ">=5.18.0"
flask = ">=2.2.2"
sqlalchemy = "*"
flask-socketio = "*"
flask-sqlalchemy = "*"
flask-marshmallow = "*"
flask-security = "*"
marshmallow-sqlalchemy = "*"
email-validator = "*"
bcrypt = "*"
pytest = "*"
scipy = ">=1.13.0"
ipython = "*"
quantstats-lumi = ">=0.3.3"
python-dotenv = "*"
ccxt = ">=4.3.74"
termcolor = "*"
jsonpickle = "*"
apscheduler = "3.10.4"
appdirs = "*"
pyarrow = "*"
tqdm = "*"
lumiwealth-tradier = ">=0.1.14"
pytz = "*"
psycopg2-binary = "*"
exchange-calendars = ">=4.5.2"
duckdb = "*"
uuid = "*"
tabulate = "*"
thetadata = "*"
holidays = "*"
websocket-client = "*"
psutil = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
coverage = "*"
ruff = "*"
isort = "*"
bandit = "*"
safety = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
