# pyproject.toml seems to be more popular than setup.cfg these days.  Adding
# configs for tools that use it and will port as much here as possible.

# Ruff is a tool that combines several linters into one including Flake8 and isort.
# Runs much faster than running them individually.
[tool.ruff]
line-length = 120
target-version = "py310"

# Move settings under lint section
[tool.ruff.lint]
select = [
  "A",  # prevent using keywords that clobber python builtins
  "B",  # bugbear: security warnings
  "E",   # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle
  "UP", # pyupgrade
  "I",  # isort
  #  "D",   # pydocstyle
]

exclude = [
    "build",
    "dist",
    "docs/conf.py",
    "sompackage/migrations",
    "*.egg-info",
    "venv*",
    "jupyter",
    "*pycache*",
    ".*",
    "data",
    "docs",
    "docsrc"
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.isort]
profile = "black"
extend_skip_glob = ["venv*", "jupyter*", "*pycache*", ".*", "data", "docs", "docsrc"]

[tool.pylint]
max-line-length = 119
known-third-party = ["lumibot"]

[tool.pytest]
markers = [
    "apitest: marks tests as API tests (deselect with '-m \"not apitest\"')"
]
filterwarnings = [
    "ignore::DeprecationWarning:aiohttp.*",
    "ignore::DeprecationWarning:quantstats.*",
    "ignore::DeprecationWarning:pandas.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore:backtest:DeprecationWarning:tests.*"
]
testpaths = ["tests"]
norecursedirs = [
    "docs",
    ".*",
    "*.egg*",
    "appdir",
    "jupyter",
    "*pycache*",
    "venv*",
    ".cache*",
    ".coverage*",
    ".git",
    "data",
    "docs",
    "docsrc"
]

[tool.coverage.run]
branch = true
command_line = "-m pytest -m \"not apitest\""
omit = [
    "*__init__.py",
    "tests/*",
    "venv*",
    ".cache/",
    ".git/",
    ".cache-directory",
    ".pytest*",
    "docs/",
    "data/",
    "docsrc/",
    "example*",
    "cache*"
]

[tool.coverage.report]
precision = 2
ignore_errors = true
show_missing = true
fail_under = 40
exclude_lines = [
    "pragma: no coverage",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.coverage.html]
directory = ".coverage.html_report"

[tool.poetry]
name = "lumibot"
version = "3.8.16"
description = "Backtesting and Trading Library, Made by Lumiwealth"
authors = ["Robert Grzesik <rob@lumiwealth.com>"]
readme = "README.md"
repository = "https://github.com/Lumiwealth/lumibot"
packages = [{include = "lumibot"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
polygon-api-client = ">=1.14.0"
alpaca-py = ">=0.28.1"
alpha-vantage = "*"
ibapi = "9.81.1.post1"
yfinance = ">=0.2.46"
matplotlib = ">=3.3.3"
quandl = "*"
numpy = ">=1.26.0"
pandas = ">=2.2.0"
pandas-datareader = "*"
pandas-market-calendars = ">=4.3.1"
plotly = ">=5.18.0"
flask = ">=2.2.2"
sqlalchemy = "*"
flask-socketio = "*"
flask-sqlalchemy = "*"
flask-marshmallow = "*"
flask-security = "*"
marshmallow-sqlalchemy = "*"
email-validator = "*"
bcrypt = "*"
pytest = "*"
scipy = ">=1.13.0"
ipython = ">=8.22.2"
quantstats-lumi = ">=0.3.3"
python-dotenv = "*"
ccxt = ">=4.3.74"
termcolor = "*"
jsonpickle = "*"
apscheduler = "3.10.4"
appdirs = "*"
pyarrow = "*"
tqdm = "*"
lumiwealth-tradier = ">=0.1.14"
pytz = "*"
psycopg2-binary = "*"
exchange-calendars = ">=4.5.2"
duckdb = "*"
uuid = "*"
tabulate = "*"
thetadata = "*"
holidays = "*"
websocket-client = "*"
psutil = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
coverage = "*"
ruff = "*"
isort = "*"
bandit = "*"
safety = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
